2015-11-23 Yann LEYDIER <yann@leydier.info>
	* View (GetZoneImage): Bugfix.
	* Glyph (LocalId, GlobalId): Added.
	* Document (AddGlyph): Bugfix.
	* GUI (display_search): Bugfix.
	* View (AlignWordCharacters): Now adds a dummy signature when the character
																has none.

2015-11-20 Yann LEYDIER <yann@leydier.info>
	* CharacterTree: Added.

2015-11-19 Yann LEYDIER <yann@leydier.info>
	* ValidationPanel: Removed threads. Tooltips are now computed in the main
	loop.
	* CharacterDialog: Added distances matrices.
	* GUI (load_project): Now shows a progress bar.

2015-11-18 Yann LEYDIER <yann@leydier.info>
	* Document (Save, GetDistanceMatrix, SetDistanceMatrix): Added.
	* View (GetZoneImage): Added.
	* GUI (display_search): Bugfix.
	* Validation (read_word): Bugfix.
	* Align: Bugfix.
	* CharacterDialog: Added.

2015-11-17 Yann LEYDIER <yann@leydier.info>
	* Glyph: Added.
	* Document (GetGlyph, AddGlyph, CollectCharacters): Added.
	* View (GetClusters): Added.
	* CharacterDialog: Added.

2015-11-16 Yann LEYDIER <yann@leydier.info>
	* trunk: Version 0.5.
	* OriStruct, OriProject: Removed.
	* OriDocument: Added (support for Oriflamms TEI guidelines).

2015-10-07 Yann LEYDIER <yann@leydier.info>
	* branch: Version 0.5.

2015-08-17 Yann LEYDIER <yann@leydier.info>
	* AlignConfig, AlignDialog, Project (AlignLine): Added option to 
			recompute words' frontiers without realigning.

2015-08-14 Yann LEYDIER <yann@leydier.info>
	* Project (AlignLine): Rewritten.
	* Word (GetCharacterFront, GetCharacterBack, GetCharacters): Bugfix.
	* Word (IsAligned, CharactersAligned): Added.

2015-08-12 Yann LEYDIER <yann@leydier.info>
	* AlignConfig: Added.
	* AlignDialog: Added.

2015-06-08 Yann LEYDIER <yann@leydier.info>
	* TEIImpoter (fill_tree): Added <am> to OK element list.

2015-06-05 Yann LEYDIER <yann@leydier.info>
	* DetectLines: Updated.

2015-06-02 Yann LEYDIER <yann@leydier.info>
	* SimplifyCurve: Rewritten.
	* GUI (add_point_to_line, rem_point_from_line): Added.
