@@ -19,9 +19,15 @@ int main(void)
 	sig[U'Ç'] = "('";
 	sig[U'D'] = "l)"; // l'  ,',  ll  ,','  ,','  l,  ,l'  l'  ,','  ,''  ll  ll  ,'l  l'  ,',  ,',  ,','  ll  ,'',  ,'l  ll  ll
 	sig[U'E'] = "l'"; // ','  l'  ll  l'  ','  l',  'l  l'  l'  ll  ,'  ll  'l  l',  l'
+	sig[U'É'] = "l'";
+	sig[U'È'] = "l'";
+	sig[U'Ê'] = "l'";
+	sig[U'Ë'] = "l'";
 	sig[U'F'] = ""; // TODO NOT FOUND
 	sig[U'G'] = "(l"; // ll  ll  ll  l'
 	sig[U'I'] = "l"; // 'l  ,l  ,l  l  ,l  l  l  l
+	sig[U'Î'] = "l";
+	sig[U'Ï'] = "l";
 	sig[U'J'] = "l"; // same as I
 	sig[U'K'] = "ll"; // ll  l',  ll  
 	sig[U'L'] = "l";
@@ -34,6 +40,9 @@ int main(void)
 	sig[U'S'] = "()"; // ,''l   '',  ,''l  ,''l  ',','  ',',l  '',,  l',  l'  ,','l  ,ll  l','l  l','  ,','l  ','',  ,',','
 	sig[U'T'] = "l'"; // l',  l'  'l  l'  ll  l',  l'
 	sig[U'U'] = "ll"; // ',ll  ll  ll  ll
+	sig[U'Ù'] = "ll";
+	sig[U'Û'] = "ll";
+	sig[U'Ü'] = "ll";
 	sig[U'V'] = "ll";
 	sig[U'X'] = ""; // TODO NOT FOUND
 	sig[U'Y'] = ",l'"; // NOT FOUND  ,l'  ,ll  ,l'  (3 occurrences)
@@ -44,10 +53,16 @@ int main(void)
 	sig[U'ç'] = "('";
 	sig[U'd'] = "(,";
 	sig[U'e'] = "('";
+	sig[U'é'] = "('";
+	sig[U'è'] = "('";
+	sig[U'ê'] = "('";
+	sig[U'ë'] = "('";
 	sig[U'f'] = "l'";
 	sig[U'g'] = "(l";
 	sig[U'h'] = "ll";
 	sig[U'i'] = "l";
+	sig[U'î'] = "l";
+	sig[U'ï'] = "l";
 	sig[U'j'] = ",l"; // only one occurrence
 	sig[U'k'] = "l'"; // only one occurrence
 	sig[U'l'] = "l";
@@ -60,6 +75,9 @@ int main(void)
 	sig[U's'] = "l"; // ll  l,  'l,  <-- using long s' signature
 	sig[U't'] = "(";
 	sig[U'u'] = "ll";
+	sig[U'ù'] = "ll";
+	sig[U'û'] = "ll";
+	sig[U'ü'] = "ll";
 	sig[U'v'] = "ll";
 	sig[U'x'] = "l'";
 	sig[U'y'] = "ll'";
